# Stru

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  DEPLOY.md  README.md  hackathon-submission.md  package-lock.json  package.json  tsconfig.json
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/ai/: goalAgent.ts  verifyAgent.ts
backend/src/routes/: faucet.ts  goal.ts  pool.ts  users.ts  verify.ts
backend/src/x402/: middleware.ts
frontend/: eslint.config.js  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: routeTree.gen.ts  start.ts  styles.css
frontend/src/components/: ClaimButton.tsx  GoalChat.tsx  PoolDashboard.tsx  ProofSubmit.tsx  WalletButton.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts  browser-polyfills.ts  solana.ts  stru_idl.json  wallet.ts
frontend/src/routes/: __root.tsx  create.tsx  dashboard.tsx  index.tsx  pool.$id.tsx
programs/stakeup/src/instructions/: claim.rs  join_pool.rs  mark_complete.rs  mod.rs  settle_pool.rs
programs/stakeup/src/state/: pool.rs
programs/stru/: Cargo.toml
programs/stru/src/: errors.rs  lib.rs
programs/stru/src/instructions/: claim.rs  create_pool.rs  join_pool.rs  mark_complete.rs  mint_badge.rs  mod.rs  settle_pool.rs
programs/stru/src/state/: mod.rs  participant.rs  pool.rs
supabase/: schema.sql
tests/: stru.ts
