[package]
name = "stakeup"
version = "0.1.0"
description = "StakeUp — on-chain goal accountability pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stakeup"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
